// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PStampCard should render when all stamped 1`] = `
<DocumentFragment>
  <div
    class="styled__StampCardContainer-sc-1t1auio-6 VGgex"
  >
    <img
      class="styled__StampCard-sc-1t1auio-7 jeBhwm"
      src="/cicd2023/ui/stamp_bg.jpg"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 htipaU"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 bATKRm"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 cgNZFZ"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 caRSaT"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 jbvwfG"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 kdXKwo"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PStampCard should render when not stamped at all 1`] = `
<DocumentFragment>
  <div
    class="styled__StampCardContainer-sc-1t1auio-6 VGgex"
  >
    <img
      class="styled__StampCard-sc-1t1auio-7 jeBhwm"
      src="/cicd2023/ui/stamp_bg.jpg"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 htipaU"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 bATKRm"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 cgNZFZ"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 caRSaT"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 jbvwfG"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 kdXKwo"
    />
  </div>
</DocumentFragment>
`;

exports[`PStampCard should render without crash 1`] = `
<DocumentFragment>
  <div
    class="styled__StampCardContainer-sc-1t1auio-6 VGgex"
  >
    <img
      class="styled__StampCard-sc-1t1auio-7 jeBhwm"
      src="/cicd2023/ui/stamp_bg.jpg"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 htipaU"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 bATKRm"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 cgNZFZ"
    >
      <img
        class="styled__Stamp-sc-1t1auio-9 hKSnww"
        src="/cicd2023/ui/cicd2023_stamp.png"
      />
    </div>
    <div
      class="styled__StampFrame-sc-1t1auio-8 caRSaT"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 jbvwfG"
    />
    <div
      class="styled__StampFrame-sc-1t1auio-8 kdXKwo"
    />
  </div>
</DocumentFragment>
`;
